--- a/frontend/src/assets/CustomCards.css
+++ b/frontend/src/assets/CustomCards.css
@@ -1,12 +1,25 @@
 
-     .custom-info-card {
-       background-color: rgb(250, 204, 79); /* Colore del testo FreeToGO */
-       border-radius: 15px; /* Angoli smussati */
-       box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Ombra obliqua */
-       transform: rotate(2deg); /* Rotazione di 2 gradi */
-       transition: transform 0.3s ease-in-out; /* Animazione al passaggio del mouse */
-     }
-     
-     .custom-info-card:hover {
-      transform: rotate(0deg) scale(1.05); /* Effetto al passaggio del mouse */
-    }
+.custom-info-cards .card-body{
+  background-color: rgb(250, 204, 79);
+transform: rotate(2deg);
+ transition: transform 0.3s ease-in-out;
+}
+.custom-info-cards2 .card-body{
+  background-color: rgb(250, 204, 79);
+  transform: rotate(-2deg);
+ transition: transform 0.3s ease-in-out;
+}
+.custom-info-cards3 .card-body {
+  background-color: rgb(250, 204, 79);
+    transform: rotate(4deg);
+ transition: transform 0.3s ease-in-out;
+}
+.custom-info-cards .card-body:hover{
+  transform: rotate(0deg) scale(1.05);
+}
+.custom-info-cards2 .card-body:hover{
+  transform: rotate(0deg) scale(1.05);
+}
+.custom-info-cards3 .card-body:hover{
+  transform: rotate(0deg) scale(1.05);
+}
