--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,18 @@
 :root{
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-background-color: #242424;
+background-color: #ffffff;
 
 
 
 
 }
+
+ html, body, #root {                                                                                                                                                                                                            
+   height: 100%;                                                                                                                                                                                                                
+ }                                                                                                                                                                                                                              
+                                                                                                                                                                                                                                
+ #root {                                                                                                                                                                                                                        
+     display: flex;                                                                                                                                                                                                               
+   flex-direction: column;                                                                                                                                                                                                      
+ }  
