--- a/frontend/src/assets/Footer.css
+++ b/frontend/src/assets/Footer.css
@@ -1,90 +1,64 @@
+
 .footer {
-        background-color: #333;
-         color: #f2f2f2;
-        
-         font-family: 'Arial', sans-serif;
-     }
-     
-     .footer-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin:auto;
-    }
-    
-    .footer-section {
-        flex: 1;
-        min-width: 250px;
-        margin: 20px;
-    }
-    
-    .footer-title {
-        font-size: 1.5rem;
-        color: #fff;
-        margin-bottom: 15px;
-        border-bottom: 2px solid #555;
-        padding-bottom: 10px;
-    }
+    background-color: #333;
+    color: #f2f2f2;
+    font-family: 'Arial', sans-serif;
+    padding: 20px 0; 
+}
+
+
+.footer-container {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px; 
+}
+
+
+.footer-section {
+   
+    flex: 1 1 280px; 
     
 
-    .footer-section.about p {
-        line-height: 1.6;
-    }
-   
-  
-    .footer-section.links ul {
-       list-style: none;
-        padding: 0;
-    }
-    
-    .footer-section.links a {
-        color: #f2f2f2;
-        text-decoration: none;
-        line-height: 2;
-        transition: color 0.3s ease;
-    }
-    
-    .footer-section.links a:hover {
-        color: #007bff;
-    }
-    
-   
-   .social-icons a {
-        color: #f2f2f2;
-        margin-right: 15px;
-        font-size: 1.5rem;
-        text-decoration: none;
-       transition: color 0.3s ease;
-    }
-    
-    .social-icons a:hover {
-        color: #007bff;
-    }
-    
-   
-    .footer-bottom {
-        text-align: center;
-        padding-top: 20px;
-        border-top: 1px solid #555;
-        margin-top: 20px;
-    }
-    
+    margin: 10px; 
+    text-align: center; 
 
-    @media (max-width: 768px) {
-        .footer-container {
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-    
-        .footer-section {
-            margin: 20px 0;
-            min-width: 100%;
-        }
-    
-        .footer-title {
-            border-bottom: none;
-            padding-bottom: 5px;
-        }
-    }
+}
+
+.footer-section.about p {
+    line-height: 1.6;
+    margin: 15px;
+}
+ 
+.footer-section.links ul {
+    list-style: none;
+    padding: 0;
+    margin: 15px;
+}
+
+.footer-section.links a {
+    color: #f2f2f2;
+    text-decoration: none;
+    line-height: 2;
+    transition: color 0.3s ease;
+   
+}
+.footer-section.links a:hover  {
+    color: #ddca1d;
+}
+
+.social-icons {
+
+    text-align: center;
+    margin-top: 20px;
+}
+
+.social-icons a {
+    color: #f2f2f2;
+    margin: 0 10px; 
+    font-size: 1.5rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
